--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ body {
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 /* Logo Section */
@@ -31,7 +30,7 @@ body {
 }
 
 .logo-container img {
-    width: 80px; /* Adjust the size as needed */
+    width: 80px; 
 }
 
 /* Horizontal line */
@@ -44,15 +43,15 @@ hr {
 
 /* Online Users */
 .sidebar h3 {
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
     color: #7289da;
 }
 
 .sidebar ul {
     list-style-type: none;
     padding: 0;
-    flex-grow: 1; /* Makes sure the list takes available space */
-    overflow-y: auto; /* Scroll if the list is long */
+    flex-grow: 1; 
+    overflow-y: auto;
 }
 
 .sidebar li {
@@ -60,14 +59,14 @@ hr {
     border-bottom: 1px solid #ccc;
     color: #99aab5;
     display: flex;
-    align-items: center; /* Center content vertically */
+    align-items: center; 
 }
 
 /* Online status dot */
 .sidebar li .online-dot {
     width: 10px;
     height: 10px;
-    background-color: #43b581; /* Green color for online status */
+    background-color: #43b581; 
     border-radius: 50%;
     display: inline-block;
     margin-right: 10px;
@@ -86,7 +85,7 @@ hr {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 100%; /* Full-width button */
+    width: 100%; 
 }
 
 #disconnectBtn:hover {
@@ -107,7 +106,7 @@ hr {
 #messages {
     list-style-type: none;
     margin: 0;
-    padding: 20px;
+    padding: 10px 0; 
     overflow-y: auto;
     flex-grow: 1;
 }
@@ -153,4 +152,13 @@ hr {
     margin-bottom: 10px;
     color: #7289da;
     font-style: italic;
+}
+
+/* Friend List */
+#friendList {
+    list-style-type: none; 
+    padding: 0;
+    margin: 0;
+    overflow-y: auto; 
+    flex-grow: 1;
 }
